Tizen: .wgt firmado + script de empaquetado reproducible
El README documentaba un setup que no funcionaba tal cual: decía que el
prefijo de 10 caracteres del package ID sale del certificado (no es así —
para sideload es un valor libre) y mandaba a instalar Tizen Studio entero.

- config.xml: package ID real (MiruTV0001), ya no el placeholder XXXXXXXXXX.
- build-wgt.ps1: empaqueta desde un staging con los 3 archivos que son la app
  y verifica las dos firmas antes de dar el .wgt por bueno (`tizen package -- .`
  se lleva puesto el README y los .wgt viejos adentro del paquete).
- README: setup real por CLI (sin el IDE ni UAC), y los tres gotchas que
  aparecieron — sdk.info que hay que crear a mano, el bug de profiles.xml que
  escribe rutas .pwd inexistentes, y el --add-exports para JDKs modernos.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01StyizcBsWRV5WkfudGgQpo