@@ -12,17 +12,41 @@ confirmarlos en un TV real; queda para una v2). Ver `ARCHITECTURE.md` para el re
 
 ## Setup — primera vez (una sola vez por máquina)
 
-1. **Instalar Tizen Studio**: [developer.tizen.org/development/tizen-studio](https://developer.tizen.org/development/tizen-studio/download).
-   Durante la instalación (o después, desde **Tools → Package Manager**), instalar el paquete
-   **"TV Extensions"** (o "TV" bajo "Extension SDK") — sin esto no aparece el perfil `tv-samsung`.
-2. **Crear el certificado de autor** (obligatorio incluso para instalar en tu propio TV, sin cuenta
-   de vendedor Samsung ni costo): en Tizen Studio, **Tools → Certificate Manager → Tizen** → crear
-   un perfil nuevo con un certificado de autor "self-signed". Anotá el nombre del perfil — hace
-   falta para el paso de empaquetado.
-3. **Reemplazar el placeholder de `config.xml`**: el certificado que acabás de crear tiene un
-   prefijo de 10 caracteres propio (lo muestra Tizen Studio al crearlo). Reemplazá `XXXXXXXXXX` en
-   `apps/tizen/config.xml` (los dos `id`/`package` de `<tizen:application>`) por ese valor real —
-   **no es un dato que se pueda inventar**, cada certificado tiene el suyo.
+Ya está hecho en la máquina de Agustín (ver "Estado actual" abajo). Estos pasos son para
+reproducirlo en otra máquina.
+
+**No hace falta Tizen Studio (el IDE).** Alcanza con el CLI, y se puede instalar **sin el
+instalador `.exe`** — que pide UAC y no se puede automatizar. Los paquetes del SDK son `.zip`
+planos que se extraen a mano:
+
+1. **Bajar los paquetes del CLI** desde el repo oficial
+   (`https://download.tizen.org/sdk/tizenstudio/official/binary/`). El cierre de dependencias
+   mínimo, partiendo de `WebCLI` + `Certificate-Manager` + `sdb`, son ~20 paquetes (~200 MB);
+   la lista se resuelve leyendo `pkg_list_windows-64` del directorio padre. Extraer el `data/`
+   de cada zip sobre una misma raíz (ej. `%USERPROFILE%\tizen-studio`).
+2. **Crear `sdk.info` a mano** en la raíz — lo genera el instalador, no viene en ningún paquete,
+   y sin él el CLI aborta con *"Tizen Studio is not installed properly"*:
+   ```
+   TIZEN_SDK_INSTALLED_PATH=C:\Users\<vos>\tizen-studio\
+   TIZEN_SDK_DATA_PATH=C:\Users\<vos>\tizen-studio-data\
+   TIZEN_SDK_VERSION=6.1
+   TIZEN_SDK_RELEASE_VERSION=6.1
+   ```
+3. **Certificado de autor** (gratis, sin cuenta de vendedor Samsung), todo por CLI:
+   ```powershell
+   tizen certificate -a Miru -p <pass> -n "<tu nombre>" -c AR -o Miru -f miru-author -- <dir-certs>
+   tizen security-profiles add -n MiruProfile -a <dir-certs>\miru-author.p12 -p <pass>
+   ```
+   ⚠️ **Bug conocido**: `security-profiles add` escribe en `profiles.xml` (en
+   `tizen-studio-data\profile\`) rutas a archivos `.pwd` **que nunca crea**, y el empaquetado
+   después falla. El fix es editar ese `profiles.xml` y poner las contraseñas en texto plano:
+   la tuya en el `distributor="0"`, y `tizenpkcs12passfordsigner` (la pública de Tizen) en el
+   `distributor="1"`.
+
+**El `<tizen:application id>` / `package` de `config.xml`** ya está fijado en `MiruTV0001`. Para
+sideload en modo desarrollador el package ID es un valor **libre** de 10 caracteres alfanuméricos
+(Tizen Studio lo generaría solo si crearas el proyecto desde la GUI) — no sale del certificado.
+**No lo cambies**: es la identidad de actualización de la app en el TV.
 
 ## Modo desarrollador en el Samsung — una sola vez por TV
 
@@ -32,31 +56,44 @@ confirmarlos en un TV real; queda para una v2). Ver `ARCHITECTURE.md` para el re
    PC IP".
 3. Reiniciar la TV. Confirmá que tu PC y la TV están en la **misma red local**.
 
-## Empaquetar e instalar
+## Estado actual
+
+`Miru.wgt` **ya está empaquetado y firmado** (~188 KB) en esta carpeta, listo para instalar en un
+Samsung. Falta solamente el paso de instalación, que necesita un TV Samsung en modo desarrollador
+en la misma red.
+
+## Empaquetar
+
+```powershell
+cd apps\tizen
+.\build-wgt.ps1
+```
+
+El script arma un staging con **solo** `config.xml` + `index.html` + `icon.png`, empaqueta, firma,
+y **verifica que el `.wgt` tenga las dos firmas** antes de darlo por bueno. El staging existe
+porque `tizen package -- .` mete en el paquete *todo* lo que encuentre en el directorio (el
+README, el propio script, `.wgt` viejos).
+
+Dos gotchas que el script ya resuelve, por si alguna vez empaquetás a mano:
+
+- **`IllegalAccessError` de xerces**: el CLI es de la era Java 8 y un JDK moderno le corta el
+  acceso a una clase interna. Se arregla con
+  `JAVA_TOOL_OPTIONS=--add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.dv.util=ALL-UNNAMED`.
+- El CLI necesita un `JAVA_HOME`; sirve el JBR que ya trae Android Studio.
+
+## Instalar en la TV
 
 Con la TV en modo desarrollador y en la misma red:
 
 ```powershell
-cd C:\Users\<vos>\Documents\cinefilo\apps\tizen
-
-# Empaquetar (genera Miru.wgt) — reemplazá <perfil> por el nombre del
-# certificado creado en el setup:
-tizen package -t wgt -s <perfil> -- .
-
-# Conectar a la TV (el puerto 26101 es fijo, la IP es la que ves en la
-# pantalla de Developer mode del Samsung):
+# El puerto 26101 es fijo; la IP es la que muestra la pantalla de Developer mode.
 sdb connect <ip-de-la-tv>:26101
-
-# Confirmar que la TV aparece como dispositivo conectado:
-sdb devices
-
-# Instalar:
-tizen install -n Miru.wgt -t <device-id-de-sdb-devices>
+sdb devices                                   # confirmar que aparece
+tizen install -n Miru.wgt -t <device-id>      # -n reinstala encima
 ```
 
-(También se puede hacer todo desde la GUI de Tizen Studio: **File → Import → Tizen Project**
-apuntando a `apps/tizen`, y después botón **Run** eligiendo la TV conectada como target — hace el
-empaquetado + instalación en un solo paso.)
+(`sdb.exe` y `tizen.bat` están en `%USERPROFILE%\tizen-studio\tools\` y
+`...\tools\ide\bin\` respectivamente.)
 
 ## Reinstalar después de cambios
 
